Archive2/a1/2023d33f7eeafc/output
main.cpp:15:56: error: declaration of 'void X<T>::f() noexcept (noexcept (declval<Y>().Y::f()))' has a different exception specifier
 void X<T>::f() noexcept(noexcept(std::declval<Y>().f()))
                                                        ^
main.cpp:11:10: error: from previous declaration 'void X<T>::f() noexcept (noexcept (declval<Y>().Y::f()))'
     void f() noexcept(noexcept(std::declval<Y>().f()));
          ^
