Archive2/a1/2023d33f7eeafc/main.cpp
#include <utility>

struct Y
{
    void f();
};

template<typename T>
struct X
{
    void f() noexcept(noexcept(std::declval<Y>().f()));
};

template<typename T>
void X<T>::f() noexcept(noexcept(std::declval<Y>().f()))
{
}

int main()
{
}